@@ -8,6 +8,7 @@ import org.springframework.jdbc.support.GeneratedKeyHolder;
 import org.springframework.jdbc.support.KeyHolder;
 import org.springframework.stereotype.Repository;
 import ru.yandex.practicum.filmorate.exceptions.FilmNotFoundException;
+import ru.yandex.practicum.filmorate.model.Director;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.Rating;
@@ -45,7 +46,7 @@ public class FilmDbStorage implements FilmStorage {
         try {
             Film film = jdbcTemplate.queryForObject(sql, filmRowMapper, id);
             loadLinkedDataForBatch(Collections.singletonList(film));
-            return Optional.of(film);
+            return Optional.ofNullable(film);
         } catch (EmptyResultDataAccessException e) {
             throw new FilmNotFoundException(
                     "Film with id %d doesn't exist".formatted(id));
@@ -84,6 +85,7 @@ public class FilmDbStorage implements FilmStorage {
         String sql =
                 "UPDATE films SET name = ?, description = ?, release_date = ?, " +
                 "duration = ?, rating_id = ? WHERE id = ?";
+
         jdbcTemplate.update(sql, film.getName(), film.getDescription(),
                             Date.valueOf(film.getReleaseDate()),
                             film.getDuration()
@@ -148,6 +150,30 @@ public class FilmDbStorage implements FilmStorage {
     }
 
     @Override
+    public Collection<Film> getDirectorFilms(Long directorId, String sortBy) {
+        String sql = "SELECT f.* " +
+                     "FROM films f " +
+                     "JOIN film_directors fd ON f.id = fd.film_id " +
+                     "JOIN ref_director d ON fd.director_id = d.id " +
+                     "WHERE d.id = ? " +
+                     "ORDER BY EXTRACT(YEAR FROM f.release_date);";
+        if (sortBy.equals("likes")) {
+            sql = "SELECT f.* " +
+                  "FROM films f " +
+                  "JOIN film_directors fd ON f.id = fd.film_id " +
+                  "JOIN ref_director d ON fd.director_id = d.id " +
+                  "LEFT JOIN film_likes fl ON f.id = fl.film_id " +
+                  "WHERE d.id = ? " +
+                  "GROUP BY f.id " +
+                  "ORDER BY COUNT(fl.film_id) DESC;";
+        }
+
+        List<Film> films = jdbcTemplate.query(sql, filmRowMapper, directorId);
+        loadLinkedDataForBatch(films);
+        return films;
+    }
+
+    @Override
     public void loadLinkedDataForBatch(List<Film> films) {
 
         Map<Long, Film> filmMap = films.stream()
@@ -163,6 +189,9 @@ public class FilmDbStorage implements FilmStorage {
 
         Map<Long, List<Genre>> genresMap = loadGenresForFilms(filmIds);
 
+        Map<Long, List<Director>> directorsMap = loadDirectorsForFilms(
+                filmIds);
+
         Map<Long, Rating> ratingsMap = loadRatingsByIds(ratingIds);
 
         for (Film film : films) {
@@ -170,6 +199,8 @@ public class FilmDbStorage implements FilmStorage {
                     likesMap.getOrDefault(film.getId(), new HashSet<>()));
             film.setGenres(
                     genresMap.getOrDefault(film.getId(), new ArrayList<>()));
+            film.setDirectors(directorsMap.getOrDefault(film.getId(),
+                                                        new ArrayList<>()));
 
             Rating fullRating = ratingsMap.get(film.getRating()
                                                    .getId());
@@ -216,6 +247,33 @@ public class FilmDbStorage implements FilmStorage {
         });
     }
 
+    private Map<Long, List<Director>> loadDirectorsForFilms(Set<Long> filmIds) {
+        String sql = "SELECT fd.film_id, d.id, d.name " +
+                     "FROM film_directors fd " +
+                     "JOIN ref_director d ON fd.director_id = d.id " +
+                     "WHERE fd.film_id IN (:filmIds)";
+
+        Map<String, Object> params = Collections.singletonMap("filmIds",
+                                                              filmIds);
+
+        return namedParameterJdbcTemplate.query(sql, params, rs -> {
+            Map<Long, List<Director>> result = new HashMap<>();
+            while (rs.next()) {
+                Long filmId = rs.getLong("film_id");
+                Long directorId = rs.getLong("id");
+                String directorName = rs.getString("name");
+                result.computeIfAbsent(filmId, k -> new ArrayList<>());
+                Director director = new Director(directorId, directorName);
+                if (!result.get(filmId)
+                           .contains(director)) {
+                    result.get(filmId)
+                          .add(director);
+                }
+            }
+            return result;
+        });
+    }
+
     private Map<Long, Rating> loadRatingsByIds(Set<Long> ratingIds) {
         String sql = "SELECT id, code FROM ref_rating WHERE id IN (:ratingIds)";
         Map<String, Object> params = Collections.singletonMap("ratingIds",
@@ -229,18 +287,20 @@ public class FilmDbStorage implements FilmStorage {
                                                 Function.identity()));
     }
 
-    private void saveLinkedFilmData(Film film) {
+    public void saveLinkedFilmData(Film film) {
         saveLikes(film);
         saveFilmGenres(film);
+        saveFilmDirectors(film);
     }
 
     private void deleteLinkedFilmData(Film film) {
         deleteGenres(film);
         deleteLikes(film);
+        deleteFilmDirectors(film);
     }
 
     private void saveLikes(Film film) {
-        String sql = "INSERT INTO film_likes (film_id, user_id) VALUES (?, ?)";
+        String sql = "MERGE INTO film_likes (film_id, user_id) VALUES (?, ?)";
         Set<Long> likes = film.getSetUserIdsLikedThis();
         if (likes == null || likes.isEmpty())
             return;
@@ -260,21 +320,22 @@ public class FilmDbStorage implements FilmStorage {
     }
 
     private void saveFilmGenres(Film film) {
-        String sql = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
-        List<Genre> genres = film.getGenres();
-        if (genres == null || genres.isEmpty())
-            return;
+        String sql = "MERGE INTO film_genres (film_id, genre_id) KEY (film_id, genre_id) VALUES (?, ?)";
 
-        Set<Long> uniqueGenreIds = film.getGenres()
-                                       .stream()
-                                       .map(Genre::getId)
-                                       .collect(Collectors.toSet());
+        List<Genre> genres = film.getGenres();
+        if (genres == null || genres.isEmpty()) {
+            return;
+        }
+
+        Set<Long> uniqueGenreIds = genres.stream()
+                                         .map(Genre::getId)
+                                         .collect(Collectors.toSet());
 
         List<Object[]> batchArgs = uniqueGenreIds.stream()
                                                  .map(genreId -> new Object[]{
                                                          film.getId(), genreId
                                                  })
-                                                 .toList();
+                                                 .collect(Collectors.toList());
 
         jdbcTemplate.batchUpdate(sql, batchArgs);
     }
@@ -282,5 +343,31 @@ public class FilmDbStorage implements FilmStorage {
     private void deleteGenres(Film film) {
         String sql = "DELETE FROM film_genres WHERE film_id = ?";
         jdbcTemplate.update(sql, film.getId());
+    }
+
+    private void deleteFilmDirectors(Film film) {
+        String sql = "DELETE FROM film_directors WHERE film_id = ?";
+        jdbcTemplate.update(sql, film.getId());
+    }
+
+    private void saveFilmDirectors(Film film) {
+        String sql = "INSERT INTO film_directors (film_id, director_id) VALUES (?, ?)";
+        List<Director> directors = film.getDirectors();
+        if (directors == null || directors.isEmpty())
+            return;
+
+        Set<Long> uniqueDirectorIds = film.getDirectors()
+                                          .stream()
+                                          .map(Director::getId)
+                                          .collect(Collectors.toSet());
+
+        List<Object[]> batchArgs = uniqueDirectorIds.stream()
+                                                    .map(directorId -> new Object[]{
+                                                            film.getId(),
+                                                            directorId
+                                                    })
+                                                    .toList();
+
+        jdbcTemplate.batchUpdate(sql, batchArgs);
     }
 }
